--- a/index.html
+++ b/index.html
@@ -1,12 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/CSS/font/flaticon.css">
+    <link rel="stylesheet" href="/CSS/style.css">
+    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div>
+                <ul class="nav-bar">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Works</a></li>
+                    <li><a href="#">Testimonials</a></li>
+                </ul>
+            </div>
+        </nav>
+        <div class="hero-text-box">
+            <h1>I'm Raghav Mittal.</h1>
+            <h3>I'm an <span> ambitious Programmer</span>, <span>a passionate Developer </span> and <span> a persistent
+                    Student</span> creating awesome and
+                effective Programs for different algorithmic puzzles and Machine Learning Problems. I am an
+                <span>expert</span> at creating <span>digital masterpieces</span>. Let's <a href="#">start scrolling</a>
+                and learn more <a href="#">about me</a>.
+            </h3>
+            <hr>
+            <div class="row">
+                <a href="https://github.com/Raghavmittal648"><i class="flaticon-github"></i></a>
+                <a href="https://www.instagram.com/invites/contact/?i=ezkr2w4bzq46&utm_content=2l3v5q5"><i class="flaticon-instagram"></i></a>
+                <a href="https://twitter.com/?lang=en"> <i class="flaticon-twitter"></i></a>
+                <a href="https://youtube.com/"> <i class="flaticon-youtube-logotype"></i></a>
+                <a href="https://in.linkedin.com/"> <i class="flaticon-linkedin"></i></a>
+            </div>
+
+            <div class="about-arrow">
+
+                <a href="#"><i class="flaticon-arrow-down-sign-to-navigate"></i></a>
+            </div>
+
+        </div>
+    </header>
+
 </body>
+
 </html>
