add about section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <hr>
             <div class="row">
                 <a href="https://github.com/Raghavmittal648"><i class="flaticon-github"></i></a>
-                <a href="https://www.instagram.com/invites/contact/?i=ezkr2w4bzq46&utm_content=2l3v5q5"><i class="flaticon-instagram"></i></a>
+                <a href="https://www.instagram.com/invites/contact/?i=ezkr2w4bzq46&utm_content=2l3v5q5"><i
+                        class="flaticon-instagram"></i></a>
                 <a href="https://twitter.com/?lang=en"> <i class="flaticon-twitter"></i></a>
                 <a href="https://youtube.com/"> <i class="flaticon-youtube-logotype"></i></a>
                 <a href="https://in.linkedin.com/"> <i class="flaticon-linkedin"></i></a>
@@ -45,10 +46,112 @@
 
                 <a href="#"><i class="flaticon-arrow-down-sign-to-navigate"></i></a>
             </div>
-
         </div>
     </header>
+    <section>
+        <div class="about-section">
+            <div class="Profile-image">
+                <img src="/images/profile.jpg" alt="profile">
+            </div>
+            <div class="About-text">
+                <h2>About Me</h2>
+                <p>I am pursuing B.Tech in Computer Science. from IES IPS Academy, Indore.
 
+                    My long-term goal is to contribute to the field of Machine Learning, Artificial Intelligence and
+                    Data
+                    Science. I also find interest in the field of Computer Vision and Robotics.
+                    I have worked on projects of Machine Learing using python, and project of robotics usind Arduino.
+                    I am looking forward for more opportunities in field of Data Analytics, Algorithms and Artificial
+                    Intelligence. I also have good amount of Fullstack Development Experience.
+                </p>
+
+                <div class="about-section">
+
+                    <div class="contact-details">
+
+                        <h2>Contact Details</h2>
+                        <p class="address">
+                            <span>Raghav Mittal</span><br>
+                            <span>(+91)7425086864</span><br>
+                            <span>Raghavmittal648@gmail.com</span>
+                        </p>
+                        <div>
+                            <a href="#"><button type="button" class="btn btn-primary">Resume</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="row-education">
+            <div class="schooling">
+                <h1>Education</h1>
+            </div>
+            <div class="">
+                <div class="row-item">
+
+                    <h3>IPS, INDORE</h3>
+                    <p class=""><span>B.E. (CS)&bull;</span> <em class="date">2020-2024</em></p>
+
+                    <p>
+                        The institute is committed to the challenging task of development of technical education by
+                        preparing seasoned graduates in highly sophisticated field of engineering and technology.
+                    </p>
+
+
+                </div>
+                <div class="row-items">
+
+
+
+                    <h3>Pt. UMA DUTT PUBLIC SCHOOL, DHOLPUR</h3>
+                    <p>A PRIVATE INSTITUTION | CBSE AFFILIATED</p>
+
+
+                    <div class="extra">
+                        <strong> XII (Senior Secondary), Science </strong>
+                        <p>Year of Completion: 2020</p>
+
+                        <strong>X (Secondary)</strong>
+                        <p>Year of Completion: 2018</p><br>
+                    </div>
+                </div>
+            </div>
+            <hr>
+        </div>
+        <div class="row-skill">
+            <div class="skills">
+                <h1><span>Skills</span></h1>
+            </div>
+            <div class="row-skill">
+                <p>List of the technologies learned / worked on by me with the depth of knowledge of each and every
+                    language
+                    / framework / database.
+                </p>
+            </div>
+        </div>
+        <div class="row">
+
+            <div class="bars">
+
+                <div class="bar">
+                    <ul>
+                        <li> HTML/CSS: <meter min="0" max="100" value="100"></meter></li>
+                        <li> Java: <meter min="0" max="100" value="80"></meter></li>
+                        <li> Python: <meter min="0" max="100" value="60"></meter></li>
+                        <li> AI/ML: <meter min="0" max="100" value="65"></meter></li>
+                    </ul>
+                    <ul>
+                        <li> JavaScript: <meter min="0" max="100" value="90"></meter></li>
+                        <li> c++: <meter min="0" max="100" value="80"></meter></li>
+                        <li> Ionic: <meter min="0" max="100" value="50"></meter></li>
+                        <li> Spring Boot: <meter min="0" max="100" value="60"></meter></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
