--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         <nav>
             <div>
                 <ul class="nav-bar">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Resume</a></li>
-                    <li><a href="#">Works</a></li>
-                    <li><a href="#">Testimonials</a></li>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li> 
+                    <li><a href="#education">Resume</a></li>
+                    <li><a href="#work">Works</a></li>
+                    <li><a href="#slider">Testimonials</a></li>
                 </ul>
             </div>
         </nav>
-        <div class="hero-text-box">
+        <div class="hero-text-box" id="home">
             <h1>I'm Raghav Mittal.</h1>
             <h3>I'm an <span> ambitious Programmer</span>, <span>a passionate Developer </span> and <span> a persistent
                     Student</span> creating awesome and
@@ -44,12 +44,12 @@
 
             <div class="about-arrow">
 
-                <a href="#"><i class="flaticon-arrow-down-sign-to-navigate"></i></a>
+                <a href="#about"><i class="flaticon-arrow-down-sign-to-navigate"></i></a>
             </div>
         </div>
     </header>
     <section>
-        <div class="about-section">
+        <div class="about-section" id="about">
             <div class="Profile-image">
                 <img src="/images/profile.jpg" alt="profile">
             </div>
@@ -84,7 +84,7 @@
         </div>
     </section>
     <section>
-        <div class="row-education">
+        <div class="row-education" id="education">
             <div class="schooling">
                 <h1>Education</h1>
             </div>
@@ -137,21 +137,107 @@
 
                 <div class="bar">
                     <ul>
-                        <li> HTML/CSS: <meter min="0" max="100" value="100"></meter></li>
-                        <li> Java: <meter min="0" max="100" value="80"></meter></li>
-                        <li> Python: <meter min="0" max="100" value="60"></meter></li>
-                        <li> AI/ML: <meter min="0" max="100" value="65"></meter></li>
+                        <li class="bar-left"><p> HTML/CSS:</p> <meter min="0" max="100" value="100"></meter></li>
+                        <li class="bar-left"><p>Java:</p> <meter min="0" max="100" value="80"></meter></li>
+                        <li class="bar-left"><p> Python:</p> <meter min="0" max="100" value="60"></meter></li>
+                        <li class="bar-left"><p>AI/ML:</p> <meter min="0" max="100" value="65"></meter></li>
                     </ul>
                     <ul>
-                        <li> JavaScript: <meter min="0" max="100" value="90"></meter></li>
-                        <li> c++: <meter min="0" max="100" value="80"></meter></li>
-                        <li> Ionic: <meter min="0" max="100" value="50"></meter></li>
-                        <li> Spring Boot: <meter min="0" max="100" value="60"></meter></li>
+                        <li class="bar-right"> <p>JavaScript:</p> <meter min="0" max="100" value="90"></meter></li>
+                        <li class="bar-right"> <p>C++: </p><meter min="0" max="100" value="80"></meter></li>
+                        <li class="bar-right"> <p>Ionic: </p><meter min="0" max="100" value="40"></meter></li>
+                        <li class="bar-right"> <p>Spring Boot: </p><meter min="0" max="100" value="60"></meter></li>
                     </ul>
                 </div>
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="project" id="work">
+            <h1>checkout some of my projects </h1>
+        <div>
+            <a href="https://github.com/Raghavmittal648/omni-food" class="omnifood"><img src="/images/logo.png" alt=""></a>
+        </div>
+    </div>
+    </section>
+
+
+
+
+
+
+
+    <section>
+    <div id="slider">
+        <input type="radio" name="slider" id="slide1" checked>
+        <input type="radio" name="slider" id="slide2">
+        <input type="radio" name="slider" id="slide3">
+        <div id="slides">
+            <div id="overflow">
+                <div class="inner">
+                    <div class="slide slide-1">
+                        <div class="slide-content">
+                            <h1>"</h1>
+                            <p>When something is important enough, you do it even if the odds are<br> not in your favor.</p>
+                            <h6>&mdash; Elon Musk</h6>
+                        </div>
+                    </div>
+
+                    <div class="slide slide-2">
+                        <div class="slide-content">
+                            <h1>"</h1>
+                            <p>Don't take rest after your first victory because if you fail in second, <br> more lips are
+                                waiting to say that your first victory was just luck.</p>
+                                <h6>&mdash; Dr APJ Abdul Kalam</h6>
+                        </div>
+                    </div>
+
+                    <div class="slide slide-3">
+                        <div class="slide-content">
+                            <h1>"</h1>
+                            <p>We simply attempt to be fearful when others are greedy and to be greedy only<br> when others are fearful.</p>
+                            <h6>&mdash; Warren Buffett</h6>
+                        </div>
+                    </div>
+                    
+                </div>
+                <div id="bulletes">
+                    <label for="slide1"></label>
+                    <label for="slide2"></label>
+                    <label for="slide3"></label>
+                </div>
+            </div>
+        </div>
+      
+    </div>
+    </section>
+    <footer>
+        <div class="about-arrow-up">
+        <a href="#" class="arrow-up"><i class="flaticon-up-arrow"></i></a>
+    </div> 
+        <div class="icons">
+            <a href="https://github.com/Raghavmittal648"><i class="flaticon-github"></i></a>
+            <a href="https://www.instagram.com/invites/contact/?i=ezkr2w4bzq46&utm_content=2l3v5q5"><i
+                    class="flaticon-instagram"></i></a>
+            <a href="https://twitter.com/?lang=en"> <i class="flaticon-twitter"></i></a>
+            <a href="https://youtube.com/"> <i class="flaticon-youtube-logotype"></i></a>
+            <a href="https://in.linkedin.com/"> <i class="flaticon-linkedin"></i></a>
+        </div>
+    </footer>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
